samples/_failures_safe/1761040506_f4c652_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_584bdb40.c: In function ‘next_token’:
./samples/SAFE/__tmp_584bdb40.c:144:9: error: expected declaration or statement at end of input
  144 |         lexer->position++;
      |         ^~~~~
./samples/SAFE/__tmp_584bdb40.c:144:9: error: expected declaration or statement at end of input
